--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -25,6 +25,18 @@
 	}
 }
 
+@mixin hover-image() {
+	img {
+		filter: grayscale(1);
+		transition: filter 0.125s;
+	}
+	@media (any-hover: hover) {
+		&:hover img {
+			filter: grayscale(0);
+		}
+	}
+}
+
 @mixin ellipsis() {
 	overflow: hidden;
 	overflow: clip;
@@ -41,7 +53,7 @@
 }
 
 @mixin polka-dot-background($density: 2) {
-	background-image: radial-gradient(var(--color-4) 1px, transparent 1px), radial-gradient(var(--color-4) 1px, var(--color-7) 1px);
+	background-image: radial-gradient(var(--color-4) 1px, transparent 1px), radial-gradient(var(--color-4) 1px, transparent 1px);
 	background-size: calc(1.5rem / $density) calc(1.5rem / $density);
 	background-position: 0 0, calc(1.5rem / ($density * 2)) calc(1.5rem / ($density * 2));
 }
