--- a/src/components/PortableTextCmps/PortableTextEmbed.astro
+++ b/src/components/PortableTextCmps/PortableTextEmbed.astro
@@ -88,7 +88,7 @@ async function validateOEmbed(url: string) {
 ---
 
 {node && node.type === "url" && node.url && validateOEmbed(node.url) && (
-	<div class="embed-object" data-type="url" set:html={getOEmbed(node.url).then((data) => data.html)} />
+	<div class="embed-object" data-type="url" set:html={getOEmbed(node.url).then((data) => data.html) || ""} />
 )}
 
 <style lang="scss" is:global>
