--- a/src/components/PortableText.astro
+++ b/src/components/PortableText.astro
@@ -11,7 +11,7 @@ import PortableTextEmbed from "./PortableTextCmps/PortableTextEmbed.astro";
 const components: SomePortableTextComponents = {
 	type: {
 		image: PortableTextImage,
-		embed: PortableTextEmbed,
+		// embed: PortableTextEmbed,
 		title: PortableTextTitle,
 		description: PortableTextDescription,
 	},
